# ZaloDataMover

./: CMakeLists.txt  README.md  ZaloDataMover.cpp  app.manifest  build.bat  resource.h  resources.rc
